Dev/client/src/style.css
:root {
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  --primary-blue: #46ADF0;
  --secondary-blue: #4c589c;
  --primary-red: #f04b7f;
  --secondary-red: #a55271;
  --content-background: #FCEBFF;
}

body {
  margin: 0;
}

.image {
  display: flex;
  justify-content: center;
  margin-top: 50px;
  border-radius: 16px;
}

.nav {
  color: white;
  background-color: var(--primary-blue);
  top: 0;
  left: 0;
  right: 0; 
  display: flex;
  position: absolute;
  justify-content: space-evenly;
  align-items: center;
  padding: 8px 16px;
}

.homenav {
  display: flex;
  justify-content: space-between;
}

.navbar {
  background-color: var(--primary-blue);
  background-position-x: 0;
  height: 100%;
  margin-top: 40px;
  position: fixed; 
  z-index: 1;
  width: 0px;
  top: 0;
  left: 0;
  overflow-x: hidden; 
  transition: 0.5s; 
}

.opened {
  display: flex;
  padding-left: 16px; 
  flex-flow: column nowrap;
  justify-content: flex-start;
  width: 150px;
  overflow-x: visible;
}

.icon-button {
  border: none;
  background-color: var(--primary-blue);
  display: flex;
  padding: 4px;
  width: 25px;
  height: 25px;
  justify-content: center;
  align-items: center;
}

.icon {
  display: flex;
  justify-content: center;
}

.link {
  color: white;
  gap: 10px;
  padding-bottom: 4px;
}

.logout {
  display: flex;
  align-self: center;
  color: white;
  background-color: var(--secondary-red);
  border: none;
  padding: 8px;
  border-radius: 4px;
  margin: 8px;
  margin-top: 300px;
}


/* These are for AiChat.vue - These must be global so I can programmatically add chats to the screen */
.chat {
  padding: 8px;
  margin: 8px;
  border: none;
  border-radius: 4px;
}

.sent {
  display: flex;
  justify-content: flex-end;
  background-color: var(--primary-red);
  color: white;
  position: relative;
  margin-bottom: 10px;
  margin-left: calc(100% - 240px);
  padding: 10px;
}

.response {
  display: flex;
  justify-content: flex-start;
  background-color: var(--secondary-blue);
  color: white;
  position: relative;
  margin-bottom: 10px;
  margin-right: calc(100% - 240px);
  padding: 10px;
}

